@@ -1,2 +1,807 @@
 # mc-stuff
-Bunch of notes and what not for Minecraft.
+
+*Some notes on random stuff. All this is updated for Java Edition latest v1.19.3, but I've been playing on and off in the years since v1.5.2.*
+
+# Index
+
+[Mobs](#mobs)
+<br>&emsp;[Cat](#cat)
+<br>&emsp;[Horses, Donkeys, and Mules](#horses-donkeys-and-mules)
+<br>&emsp;[Frog](#frog)
+<br>&emsp;[Panda](#panda)
+<br>&emsp;[Chicken](#chicken)
+<br>&emsp;[Ocelot](#ocelot)
+<br>&emsp;[Dolphin](#dolphin)
+<br>&emsp;[Axolotl](#axolotl)
+<br>&emsp;[Bee](#bee)
+<br>&emsp;[Mooshroom](#mooshroom)
+<br>&emsp;[Rabbit](#rabbit)
+<br>&emsp;[Creeper](#creeper)
+<br>&emsp;[Zombie](#zombie)
+<br>&emsp;[Skeleton](#skeleton)
+<br>&emsp;[Blaze](#blaze)
+<br>&emsp;[Magma Cube](#magma-cube)
+<br>&emsp;[Piglin](#piglin)
+<br>&emsp;[Hoglin](#hoglin)
+<br>&emsp;[Witch](#witch)
+<br>[Items](#items)
+<br>&emsp;[Ore Depths and Biomes](#ore-depths-and-biomes)
+<br>&emsp;[Block Functions](#block-functions)
+<br>&emsp;[Smelting & Fuel](#smelting--fuel)
+<br>&emsp;[Composting](#composting)
+<br>[Farming Methods](#farming-methods)
+<br>&emsp;[Crop Farming](#crop-farming)
+<br>&emsp;[Bone Meal Farm](#bone-meal-farm)
+<br>&emsp;[Iron Farm](#iron-farm)
+<br>&emsp;[Zombie Villager Farm](#zombie-villager-farm)
+<br>&emsp;[Charged Creeper Farm](#charged-creeper-farm)
+<br>&emsp;[Blaze Rod Farm](#blaze-rod-farm)
+<br>&emsp;[Witch Farm](#witch-farm)
+<br>[Gameplay](#gameplay)
+<br>&emsp;[Quick Tips](#quick-tips)
+<br>&emsp;[Nether Survival](#nether-survival)
+<br>&emsp;[Biomes](#biomes)
+<br>&emsp;[Alchemy/Brewing](#alchemybrewing)
+<br>&emsp;[Enchanting](#enchanting)
+<br>&emsp;[Villager Trades]()
+<br>&emsp;[Commands](#commands)
+<br>&emsp;[Functional Setups](#functional-setups)
+<br>&emsp;[Buried Treasure Maps](#buried-treasure-maps)
+<br>[Extras](#extras)
+<br>&emsp;[Seed Mappers](#seed-mappers)
+<br>&emsp;[Shortcuts](#shortcuts)
+<br>&emsp;[Bypass Launcher](#bypass-launcher)
+<br>&emsp;[Resource Packs](#resource-packs)
+<br>&emsp;[Mods](#mods)
+
+# Mobs
+
+*Some info on specific mobs.*
+
+### Cat
+
+Spawns in **Villages** and **Swamp Huts**. Can be tamed with **Raw Cod** or **Raw Salmon** (same as [[Ocelots]](#ocelot)). They don't take fall damage from any height.
+
+### Horse, Donkey, and Mule
+
+Horses and donkeys spawn on the surface in the wild. Mules do not spawn naturally. They must be bred by taming any **Horse** and **Donkey**, then feeding both a **Golden Apple** or **Golden Carrot**.
+
+The rare skeleton variant can be ridden underwater and can be obtained by an incredibly rare chance on lightning striking any **Horse**. Or by finding and triggering a **Trap Horse** (only in `Hard` difficulty), killing **Skeletons** atop their skeleton **Horses**, and taming the skeleton **Horses**.
+
+### Frog
+
+The rare green variant can be obtained by breeding two frogs by feeding them **Slimeballs**. After one **Frog** hops to water and lays its **Frogspawn**, wait a while for the **Tadpoles** to hatch from it. After they've hatched and are swimming around, catch one with an **Empty Bucket** and travel to some liquid **Water** in any cold/snowy biome. Place the **Tadpole** into the water. Beware, sometimes liquid **Water** in these biomes can freeze. After a while, it will mature into the green variant.
+
+### Panda
+
+Can be found in **Bamboo Jungle** biomes. The rare brown variant can only be obtained by random mutation chance during breeding. Feed regular **Pandas** some **Bamboo** until they breed a brown **Panda**.
+
+### Chicken
+
+Can be found in the **Nether**, as baby **Zombified Piglin** have a small chance to spawn in as a **Chicken Jockey**.
+
+### Ocelot
+
+Spawns in **Jungle** biomes. Can be tamed with **Raw Cod** or **Raw Salmon**.
+
+### Dolphin
+
+If fed **Cod** or **Salmon**, they will lead you to nearby treasure. When you break the **Chest** it led you to and feed it more **Cod** or **Salmon**, it'll lead you to the next nearby treasure.
+
+### Axolotl
+
+Rare purple variant can only be found by an incredibly small chance of a gene mutation during breeding.
+
+### Bee
+
+Bees can be farmed for **Honey**, **Honeycomb** and their respective blocks. They can be herded/bred by feeding them flowers.
+
+**Bee Nests** are natural while **Bee Hives** are crafted. Both serve the same purpose. **Nests** have a small chance to generate on **Oak** and **Birch** trees when a **Sapling** grows into a mature **Oak/Birch Tree** with a flower within `2` blocks of the **Sapling**. Using **Shears** on a nest/hive gives up to `3` comb. Using a **Glass Bottle** gives one **Honey Bottle** (cures poison; can be crafted into `3` **Sugar**). A `2x2` of **Honey Bottles** crafts a **Honey Block**, while a `2x2` of **Honeycomb** crafts a **Honeycomb Block**.
+
+To prevent bees from angering and swarming while harvesting, you have to smoke them out. This is best done by placing a **Carpet** or **Trapdoor** one block below the nest, then a smoke-producing block (usually a **Campfire**, but lit **Netherrack** or **Soil Soil** works) `2` blocks below the nest/hive. This blocks the flames from damaging the bees but lets the smoke rise freely, and the fire can remain there indefinitely. If the nest/hive is higher than the smoke will reach, place a **Hay Bale** under the **Campfire**.
+
+### Mooshroom
+
+Only spawn in **Mushroom Fields** biomes (commonly referred to as "Mushroom Islands" as they're only found surrounded by **Deep Ocean** biomes).
+
+Variant | Details
+:--- | ---
+Red | The only mob which spawns in **Mushroom Fields** biomes.
+Brown | Incredibly small chance for gene mutation during breeding. Variants swap when a **Mooshroom** is struck by lightning. The [[Charged Creeper Farm]](#charged-creeper-farm) method works for this.
+
+### Rabbit
+
+Found in the wild. Can be bred with **Carrots**, **Golden Carrots**, and **Dandelions**. Meat can be used as an ingredient for **Rabbit Stew**. The **Rabbit Foot** can be used in [[potion brewing]](#alchemybrewing)
+
+### Creeper
+
+- **Creepers** explode when near the player. If it has a status boost when it explodes, a pool of that status effect, similar to the **Lingering** variant(s) of that effect, equivalent to the explosion radius will be created.
+- **Creepers** flee from **Cats**.
+
+Variant | Details
+:--- | ---
+Creeper | Standard mob variant.
+Charged Creeper | Buffed explosion. Created when a **Creeper** is struck by lightning. Can be farmed: [[Charged Creeper Farm]](#charged-creeper-farm)
+
+### Zombie
+
+Variant | Details
+:--- | ---
+Husk | Spawns only in **Desert** biomes. They do not burn in sunlight and their unarmed attacks don't inflict **Hunger**. Can be led to water and rehydrate into normal **Zombie** variants.
+Zombie | Base mob variant.
+Zombie Villager | Small chance to spawn at night. Spawns in **Abandoned Villages**, which themselves are very rare at a `0.02` chance of all **Villages**. They will not despawn unless you have traded with them, use a **Nametag** on them, or have given them an item. Can be cured and, as a result of such, offer discounts on trades. Can be exploited for permanent discounts on rare enchantments with [[Zombie Villager Farm]](#zombie-villager-farm) method.
+Drowned | Spawns in **Oceans**, **Rivers**, **Dripstone Caves**, or when **Zombies** drown. Usually attack through melee attacks, but may also come armed with **Tridents** which they throw. They are the only source of **Tridents**, and the only renewable source of **Copper**. 
+
+### Skeleton
+
+All skeletons have a `0.11` chance of being left-handed.
+
+Variant | Details
+:--- | ---
+Skeleton | Base mob variant.
+Stray | Variant created when a **Skeleton** becomes trapped in **Powder Snow**.
+
+### Blaze
+
+Spawns in **Nether Fortress** and are the only source of **Blaze Rods**.
+
+### Magma Cube
+
+Spawns in the **Nether**. Behaves similarly to **Slime**, but is fireproof, jumps higher, and deals more damage.
+
+### Piglin
+
+Variant | Details
+:--- | ---
+Piglin | Base mob variant.
+Zombified Piglin | a.k.a. the old **Zombie Pigman**
+
+### Hoglin
+
+Variant | Details
+:--- | ---
+Hoglin | Spawns only in **Crimson Forest** biomes.
+Zoglin | a.k.a. "Zombified Hoglin". Spawns only when a **Hoglin** passes through a **Nether Portal** to the **Overworld**. Hostile to all mobs.
+
+### Witch
+
+Spawns in **Swamp Huts**. Does not spawn in **Mangrove Swamp**. Loot:
+
+- Redstone Dust
+- Spider Eye
+- Glowstone Dust
+- Gunpowder
+- Sugar
+- Glass Bottle
+- Stick
+
+# Items
+
+*Some info on specific items.*
+
+### Ore Depths and Biomes
+
+Type | Common<br>Biome(s) | Most Common<br>Depth (Y) | Depths (Y)<br>(From/To) | Blobs Per Chunk | Notes
+:--- | --- | --- | --- | --- | ---
+Coal Ore | Stoney Peaks | -<br>95 | 136/320<br>0/190 | 30<br>20 | No spawn chance cut from touching air.
+Copper Ore | - | 47 | -16/112 | 6 | Very common near water.
+Redstone Ore | Deepslate | -50 | -63/15<br>-63/-32 | 4<br>8 | No spawn chance cut from touching air. Common at lower depths.
+Iron Ore | Stoney Peaks<br>Deepslate | 255<br>15<br>- | 128/320<br>24/54<br>-63/64 | 40<br>6<br>3 | Common in **Stoney Peaks**.
+Gold Ore | Badlands<br>Mesa (Stone Layers) | -16<br>- | -64/32<br>32/256 (Badlands) | 4<br>50 (Badlands) | Very common in **Badlands** and **Mesa** (stoney depths).
+Nether Gold Ore | - | - | 10-117 | 10<br>20 (Basalt Delta) | Blobs in patches all around the **Nether**.
+Emerald Ore | High Mountains<br>Stoney Peaks | 256<br>6-7 | -16/320 | 50 | Common surface spawns. **Deepslate Emerald Ore** is quite rare, but most common at the surface, so for the **Deepslate** variant it's most common to be where **Stone** and **Deepslate** start to mix.
+Diamond Ore | Deepslate | -58 | 14/-63 | 7 (1-4 Ores)<br>1 (1-12 Ores, Every 1/9 Chunk)<br>4 (1-8 Ores) | Low chance of blob spawn if touching air.
+Ancient Debris<br>(Netherite Ore) | Nether | 14/15<br>-15 | 8/22<br>8/119 | 2<br>1 | More common at lower depths. Important to strip mine chunk borders. [[Reference.]](https://youtu.be/1MLXD0zkkB4)
+
+- When ore hunting, bring plenty of **Potion of Night Vision** and  **Potion of Water Breathing**. Those effects make ores so much easier to spot and mine, especially in underground rivers.
+- The **Silk Touch** enchantment generally fares better than **Fortune III** with tools. Not only can you carry more, most ore blocks yield slighty more product when smelted than if mined with **Fortune III**. In the case for **Lapis Lazuli** and **Copper**, mining with **Fortune III** yields a ton of product and will quickly fill up your inventory. Using a **Pickaxe** with **Silk Touch** not only gives you bonus product after smelting, but also frees up inventory space.
+
+### Tool/Armor Materials
+
+- Repair and disenchant by placing two of the same item into a **Grindstone**. The durability of the product is that of the two inputs combined along with `5%` of the base item's maximum durability.
+- Repair by placing the item and its corresponding crafting material into an **Anvil**. The target (left slot) is repaired, adding the durability of the sacrifice (right slot) plus a bonus of `12%` of the maximum durability of the item, up to the item's maximum durability. If the target is undamaged, there is no charge for repair, otherwise, the cost is 2 levels.
+
+Item | Usage
+:--- | ---
+Wood | Charcoal. Wooden tools. Base material for many crafted blocks.
+Cobblestone | Stone tools. Crafted blocks are more resilient to explosions.
+Iron | Wide array of crafting.
+Gold | **Golden Carrots/Apples**. Golden tools are fastest, but have very low durability. Used in crafting **Netherite Ingots**.
+Diamond | Used to craft **Enchanting Table** and diamond tools and armor which diminish slowest of all Overworld blocks.
+Netherite | The best of the best for tools and armor. Requires crafting and placing a diamond version of the tool/armor into a **Smithing Table** along with a **Netherite Ingot** (crafted with `4` **Gold Ingot** + `4` **Netherite Scrap**) and **Smithing Template**.
+
+### Block Functions
+
+Block | Unique Function
+:--- | ---
+Furnace | Cooks food and smelts blocks at the standard rate. Can cook and smelt everything.
+Blast Furnace | Smelts **Blocks** and **Ores** at `2.0x` rate. Cannot cook food or bake logs. Yields `0.5x` XP per smelt.
+Smoker | Cooks food at `2.0x` rate. Cannot smelt blocks or bake logs. Yields `0.5x` XP per cook.Cartography Table | Zooms out maps. (`Map` + `Paper`)
+Brewing Stand | Enables [[Alchemy/Brewing]](#alchemybrewing).
+Enchanting Table | Enables [[Enchanting]](#enchanting).
+Compass | Points to world spawn.
+Lodestone | Changes `Compass` needle direction, given the Lodestone is in the same dimension. Right-click a regular **Compass** on a **Lodestone** to turn it into a glowing **Lodestone Compass** which points to the **Lodestone** it was paired with.
+
+### Smelting & Fuel
+
+- **Furnace** smelts and cooks everything at standard rates.
+- The other furnace types have specialized purposes. The **Smoker** only cooks food, and the **Blast Furnace** only smelts ores/metals/minerals. They do their job twice as fast as a regular **Furnace**, but fuel consumption speed is also doubled for both.
+- **Campfire** only cooks food, but can cook up to four items at a time. It is beaten by the **Smoker** in terms of overall efficiency, but its lack of need for fuel may be a large benefit. Unlike the three furnace types, items cannot be loaded into a **Campfire** from a **Hopper**, **Dropper**, or **Dispenser**.
+
+Item | Burning Time
+:--- | ---
+**Lava Bucket** | *1000*
+**Block of Coal** | *800*
+**Dried Kelp Block** | *200*
+**Blaze Rod** | *120*
+**Coal<br>Charcoal** | *80*
+**Boat** | *60*
+**Scaffolding** | *2.5*
+**Bee Nest<br>Bee Hive<br>Block of Bamboo<br>Log<br>Planks<br>Stairs<br>Pressure Plate<br>Trapdoor<br>Fence<br>Fence Gate<br>Mangrove Roots<br>Ladder<br>Crafting Table<br>Cartography Table<br>Fletching Table<br>Smithing Table<br>Loom<br>Bookshelf<br>Lectern<br>Composter<br>Chest<br>Barrel<br>Daylight Detector<br>Jukebox<br>Note Block<br>Banner<br>Crossbow<br>Bow<br>Fishing Rod** | *15*
+**Door<br>Sign<br>Wooden Sword<br>Wooden Axe<br>Wooden Pickaxe<br>Wooden Shovel<br>Wooden Hoe<br>** | *10*
+**Slab** | *7.5*
+**Button<br>Bowl<br>Sapling<br>Stick<br>Azalea<br>Wool** | *5*
+**Carpet** | *3.35*
+**Bamboo** | *2.5*
+
+### Composting
+
+- Allows recycling of natural materials into **Bone Meal**. All eligible items have a chance to compost when placed into a **Composter**. When the level reaches `7`, **Bone Meal** can be collected from it.
+- **Composters** can interact with **Redstone**. Loaded with items from the top, and **Bone Meal** pulled from below. The sides cannot be interacted with.
+
+Composting<br>Chance<br>(%) | Items
+:--- | ---
+30 | Beetroot Seeds<br>Dried Kelp<br>Glow Berries<br>Grass<br>Hanging Roots<br>Mangrove Roots<br>Kelp<br>Leaves<br>Melon Seeds<br>Moss Carpet<br>Pumpkin Seeds<br>Saplings<br>Seagrass<br>Small Dripleaf<br>Sweet Berries<br>Wheat Seeds
+50 | Cactus<br>Dried Kelp Block<br>Flowering Azalea Leaves<br>Glow Lichen<br>Melon Slice<br>Nether Sprouts<br>Sugar Cane<br>Tall Grass<br>Twisting Vines<br>Vines<br>Weeping Vines
+65 | Apple<br>Azalea<br>Beetroot<br>Big Dripleaf<br>Carrot<br>Cocoa Beans<br>Ferns<br>Flowers<br>Fungus<br>Lily Pad<br>Melon<br>Moss Block<br>Mushrooms<br>Mushroom Stem<br>Nether Wart<br>Potato<br>Pumpkins<br>Roots<br>Sea Pickle<br>Shroomlight<br>Spore Blossom<br>Wheat
+85 | Baked Potato<br>Bread<br>Cookie<br>Flowering Azalea<br>Hay Bale<br>Mushroom Blocks<br>Nether Wart Block<br>Warped Wart Block
+100 | Cake<br>Pumpkin Pie
+
+# Farming Methods
+
+*Some info on farming stuff.*
+
+### Crop Farming
+
+- A water source block will irrigate four blocks outwards.
+- Using a **Hoe** on **Dirt** will turn it into **Farmland**.
+- Crops will only grow if it is directly above a block of **Farmland** and at a light level of `9` or higher at the plant. This doesn't have to be sunlight, so **Torches** let crops grow at night or underground. The chunk the crop is in is receiving chunk ticks, which on Java Edition the chunk also has to be within 128 blocks of the nearest player.
+- **Bees** carrying pollen which fly over crops have a chance of advancing up to `10` plants by `1` growth stage after flying over them.
+- In single-player or in multiplayer with only one player nearby, crops do not grow faster while the player is sleeping. However, if torches are not being used, sleeping skips past the nights when the crops would not grow.
+- **Wheat Seeds** can be obtained by breaking **Grass**. Mature crops drop `1` **Wheat** and `1-4` **Wheat Seeds**.
+- **Carrots** and **Potatoes** are their own seed. **Zombies** have a `0.025` chance to drop either, and the chance is increased by `0.01` per level of **Looting**. Both crops drop `1-4` carrots/potatoes per mature plant. Potato crops have a `0.02` chance of dropping a useless **Poisonous Potato**.
+- **Beetroot** grows from **Beetroot Seeds** which can be found as chest loot. Mature crops drop `1` **Beetroot** and `1-4` **Beetroot Seeds**.
+- **Nether Wart** is planted in **Soul Soil** (from **Soul Sand Valley** in the **Nether**), grows at any light level, does not require **Water**, and is used for [[Potion Brewing]](#alchemybrewing).
+- **Red Mushrooms** and **Brown Mushrooms** can be planted in **Dirt**, grow in light levels less than `13`, and do not require **Water**. They can be grown at any light level only when planted in **Mycelium**, **Podzol**, or **Crimson/Warped Nylium**. They can be obtained by using **Shears** on a [[Mooshroom]](#mooshroom) of the corresponding color.
+
+### Bone Meal Farm
+
+**Bone Meal** is a very useful item to have when considering large crop, tree, and mushroom farming operations. Although it can be obtained as loot from **Skeletons** as well as breaking down **Bone Blocks** from **Fossils** (as well as in **Soul Sand Valley** biomes of the **Nether**), it can be obtained in mass quantities in the Overworld.
+
+An early game method of obtaining **Bone Meal** is through [[composting]](#composting). While single **Composters** can be used, a slightly more advanced method is bone meal shearing. It relies on **Iron** input as it uses up durability on **Shears**. The process works by composting the **Flowers** which came from placing **Bone Meal** on **Grass**:
+
+1. Right-click a **Grass Block** using bone meal. The more space for grass, the better, as this generates more.
+2. Shear all the grass and flowers which have just been generated.
+3. Insert the compostable items into a composter farm of your choice.
+4. Collect your **Bone Meal**. You regain your original bone meal almost every time (98%), and have a 92% chance of getting some additional layers in your **Composter**. You can probably get extra layers back, which eventually add up to the new bone meal.
+5. Repeat this process.
+
+### Iron Farm
+
+[[Reference.]](https://youtu.be/ZCLf0iahOsU)
+
+1. Dig a `9x9x2` hole.
+2. Dig out the center `3x3x32`. Yes, it needs to be that deep.
+3. Place **Signs** in a `3x3x1` grid at the third block up from the bottom.
+4. Fill the `3x3x1` space *above* the signs with **Lava Buckets**.
+5. Drop down to the bottom of the pit and fill the bottom `3x3x1` with **Hoppers** leading to a **Chest** just outside of the `3x3x1` area. This ensures all loot dropped by **Golems** is collected.
+6. Dig away from the **Chest** about `20` blocks and place a **Ladder**. This will be your way of collecting what's in the **Chest**. If you know how to set up a **Bubble Elevator**, go for it.
+7. From any corner block of water at the top of the pit, count `3` out and `3` to the side, then dig down `7` blocks.
+8. Dig out a `5x3x3` hole *OUTWARDS AKA FACING AWAY FROM THE CENTER PIT*.
+9. Place `3` **Beds** against the wall (feet towards the pit).
+10. Place a **Slab** on the bottom half of each outside 2nd block up, then a **Trapdoor** on the top half of the middle space in the same block line.
+11. Smuggle `3` **Villagers** into the compartment with **Beds**.
+12. Place a **Boat** on the side opposite the **Beds**.
+13. Lure a **Zombie** into the chamber until he get into the **Boat**. You can dig a basic staircase upwards and use **Trapdoors** over a `3` block high hole to trap one.
+14. Place any non-spawnable block in bare spaces. Can be **Slabs**, **Trapdoors**, **Torches** etc. This prevents Golems from spawning down there.
+15. Repeat steps `7 to 14` all three remaining sides.
+16. Double check and make sure your **Dirt Path** surrounds the center pit by `` blocks on all sides. This is crucial because you want the **Golems** to spawn where they'll be dragged into the pit, and consequently into the **Lava**.
+
+### Zombie Villager Farm
+
+[[Villager Breeder + Zombifier]](https://youtu.be/ydNY6_WYGiA)
+<br>[[Villager Trading Hall]](https://youtu.be/4YvOkJ4mW3A)
+
+All **Librarian** villagers have a chance to offer any **Enchanted Book** except for **Soul Walker** and **Strafe Sneak**. Yes, including **Mending**. To exploit these villager merchants, if they don't immediately offer a book you want, simply destroy their podium and replace it near them. They'll usually pick the occupation back up and have different offers. Repeat until you get offered a book with an enchantment you're looking for. Once you trade with any Villager merchant they will not despawn. Same goes for cured Zombie Villagers, which are especially valuable since they give a discount to the player for curing them. However, in either case, once the Villager is traded with their deals are locked in as well, so choose wisely.
+
+Another strat uses an **Enchantment Table**, but requires a lot of spare XP: basically you just check the enchantment guesses and if nothing fits your suit, buy the cheapest enchantment, then use a **Stonecutter* to remove the enchantment(s) and check the table's new enchantments. Repeat until desired enchantment(s) are obtained.
+
+### Witch Farm
+
+Since **Witches** indefinitely spawn only in **Swamp Huts**, those are the only places they can be farmed. The basic run-down of a Witch farm is:
+
+[[Basic Witch Farm]](https://youtu.be/zwhGlDbO3DA)
+[[Witch Farm Using Blue Ice and Zoglins]](https://youtu.be/wj9NG1UZ7ew)
+
+1. Find a **Swamp Hut**.
+2. Place a `7x9` platform around the hut at the same `Y` level as the fence posts next to the front opening. This will become your middle platform. The `7x9` grid should line up with the size of the hut.
+3. Place the same platform `3` blocks up (just above the roof of the hut). This will be your top platform and leaves a `2` block high space between it and the middle platform for Witches to spawn in.
+4. Place a third platform `2` blocks below the middle platform. This is always at water level.
+5. Destroy the hut.
+6. Fill in the platforms.
+7. Extend the shorter side of each platform by `1` block, giving you three `8x9` platforms. The extra row will not be spawnable, so you'll still have the `7x9` grid for Witches to spawn on.
+8. Place and open **Trapdoors** on the blocks you just extended the platforms with. This will be part of the entity expelling.
+9. Build up both sides of the **Trapdoors**.
+10. Place blocks behind the **Trapdoors** (on the outer side of the platform).
+11. Fill the space between the **Trapdoors** and blocks behind with **Water**.
+12. Place **Redstone Dust** atop all three rows of blocks behind the **Trapdoors**.
+13. Place blocks above the **Trapdoors** to cover and isolate the **Water** behind them.
+14. Place blocks to build walls outside both edges of the `7x9` platforms. The side opposite the **Trapdoors** will be the drop zone.
+15. Place blocks to build a roof `3` blocks above the top platform. (Witches only need a `2` block high space to spawn on.)
+16. On the side opposite the **Trapdoors**, place blocks to isolate and clear out water in the `1x9` grid in front of the the bottom platform.
+17. However you want to kill them is up to you. A lot of players use an *Entity Cramming* rig with `24` **Minecarts**, but isolating them in a small area above **Hoppers** (leading to a **Chest**) works the same as with any other mob. Not to mention after a short AFK you can use **Looting** to increase item yields.
+
+### Charged Creeper Farm
+
+1. Drink a **Potion of Invisibility**.
+2. Trap a **Creeper** in an impassable barrier made of **Fence**, **Wall**, or **Trapdoor**.
+3. Top the barrier with **Lightning Rods**.
+4. Wait until a **Thunderstorm** or change the weather via `/weather thunder`. Or you can use a **Trident** with **Channeling** to control a strike directly.
+
+### Blaze Rod Farm
+
+*Also works as a Blaze Powder Farm.*
+
+1. Find a **Blaze Spawner**.
+2. Place **Torches** around all sides of the **Blaze Spawner** to prevent it from spawning any **Blazes**.
+3. Clear all blocks around it and build a `10x10x10` cube of transparent blocks, i.e. **Glass**, with the base being `6` blocks below the spawner.
+4. Dig a `2x2x1` hole out of the transparent blocks directly below the **Blaze Spawner**.
+5. Dig further down a `4x4x4` hole below the base of the structure to act as the "killing area".
+6. Place a **Double Chest** directly under the transparent blocks on the side you wish to enter from. Leave a `2` block space above the **Double Chest** for **Trapdoors**.
+7. Fill the base of the `2x2` grid with `4` **Hoppers**.
+8. Place a **Slab** atop each **Hopper**.
+9. Place a **Trapdoor** on the bottom of the transparent block above the **Double Chest** and open them.
+10. Place **Trapdoors** inside the first block down to the "killing area" and open them.
+11. Place a **Lava Source** in each bottom corner of the structure.
+12. Place a **Slab** on top of the **Blaze Spawner**.
+13. Break all **Torches** on the **Blaze Spawner**.
+14. Make an entry way to the **Double Chest** in your "killing area".
+15. Go AFK for a few minutes to allow **Blazes** to spawn.
+16. Killfarm away!
+
+### Large Tree Farm
+
+Trees which have different growth variants, like **Oak** can be forced to grow enormous every time by creating a "brace" around the block above the **Sapling**. This is easiest done by:
+
+1. Get to a decently flat area, `6x6` usually works.
+2. Place two solid blocks (**Dirt** works) on top of each other.
+3. Place a **Slab** or **Trapdoor** on the bottom half of the top block. Do this for all four sides.
+4. Break both solid blocks (leaving the brace) and plant the **Sapling** inside the brace.
+5. (OPTIONAL) Bone meal to speed up growth.
+
+### Podzol Farm
+
+If you come across any **Spruce Saplings**, plant them in a `2x2` grid. Use **Bone Meal** to speed up growth. When they mature, they'll combine and form a `2x2` thick **Giant Spruce** and most soil around the tree will convert to **Podzol**.
+
+# Gameplay
+
+*Some info on gameplay.*
+
+### Quick Tips
+
+- To negate fall damage, you can enter a **Boat** and row off of cliffs *or* perform the ol' trusty MLG trick of spamming `RMB` with **Twisted Vines** or a **Water Bucket**.
+- Using **Trapdoors** as a fence is actually more viable than actuall **Fences** and **Fence Gates**. A **Trapdoor** fence is essentially a one-way gate where mobs can enter but not exit.
+- **Carrots** and **Beetroots** aren't necessarily the best crops to farm. It's good to have them on hand, and most people farm them to breed **Pigs**, but **Potatoes** serve the same purpose but also act as a good food source for players. Crafting **Golden Carrots** yourself isn't a super viable route since most **Farmer Villagers** have good offers on **Golden Carrots**. And **Beetroot Soup** isn't super nutritious.
+- **Leather Armor** keeps you from freezing in snow. **Leather Boots** also act as snowshoes.
+- **Powder Snow** is easily distinguishable from regular **Snow** blocks because **Powder Snow** does not allow fraction blocks on top of it (i.e. "snow carpet").
+- Using a **Shield** comes in very handy for many players. They're relatively cheap to craft early on and prevent taking tons of damage. To use, just craft one, place it into your offhand slot (next to your armor), and hold `RMB` to pull up your shield when being attacked. They do have limited durability just like any other tool/armor, but can also be repaired and even enchanted with **Unbreaking**, **Mending**, etc.
+- You can trap hostile mobs (except for **Spiders**) in a **Boat**. This does not negate the explosion of **Creepers**.
+- You can get mob heads more easily by crafting **Lightning Rods** and placing them near **Creepers** during **Thunderstorms**. When lightning strikes near the **Creeper**, it becomes a **Charged Creeper**. (Alternatively, you can use a **Trident** with **Channeling**.) The first mob the **Charged Creeper** kills with its massive explosion will drop its head.
+- To kill **Endermen** ez, just place some blocks directly above your head at least `3` block out. **Endermen** cannot pass through `2` block high spaces, and thus cannot attack you.
+- To kill any *Undead* mob (**Zombies**, **Skeletons**, etc) with potions, use potions with **Healing** properties. They're undead, so effects are reversed.
+- Cooking food gives it better nutritional properties. To cook meats without a **Furnace**, you'll need a **Flint and Steel** (or **Fire Charge**) and a **Sword** (or **Axe**). Set mobs on fire by right clicking the block under them while holding your preferred firestarter, then attack them with your preferred weapon. As long as they're on fire when you kill them, cooked meat will drop rather than raw.
+- You can use an **X-Ray Glitch** to help locate underground structures.
+- **Fossils** and **Diamond Fossils** are unique structures localized to **Desert**, **Swamp** and **Mangrove Swamp** biomes.
+- **Creepers** will run away from **Cats** (tamed **Ocelots**).
+- **Skeletons** and **Zombies** will run away from **Dogs** (tamed **Wolves**).
+- You can cheese giant **Oak Trees** by planting an **Oak Sapling**, then placing any solid block `1` space above and `1` space to any side. The giant ones take a lot longer (or a lot more **Bone Meal**) to mature.
+- You can cheese giant **Spruce Trees** to get tons of **Podzol** by planting `4` **Spruce Saplings** in a `2x2` grid then either let them grow naturally or **Bone Meal** the hell out of them.
+- Fish bite more often when it's **Raining**. The **Lure** enchantment on a **Fishing Rod** adds the same effect in all weather.
+- **Treasure** loot from **Fishing** only spawns in `5x5x2` areas of water.
+- **Dog** armies are extremely useful, and almost cheating in a sense. If you're fortunate enough to find `2` **Wolves**, tame and breed them with any meat, raw or cooked, including **Rotten Flesh**. Continue feeding and breeding them until you have `10` adults. More adult **Dogs** only makes fighting mobs easier. Pet **Dogs** will attack any mob that attacks you or that you attack, including your own tamed **Dogs**.
+- Some soil blocks allow mushrooms to be planted and grow in any light level. These are **Mycelium**, **Warped/Crimson Nylium**, and **Podzol**. These can all be obtained directly with any tool enchanted with **Silk Touch** (preferably a **Shovel**). **Nylium** can be spread manually by placing **Bone Meal** on any **Netherrack** block directly next to a **Nylium** block. **Podzol** can be created spontaneously by cheesing a giant **Spruce Tree** (see above).
+- Logs, planks, etc, from **Nether** trees (**Crimson Stem** and **Warped Stem**) do not burn.
+
+### Nether Survival
+
+- To enter the **Nether**, you'll need *at least* `10` **Obsidian**. Place them in a `3x2` pattern (corners don't have to be filled) and light the inside of one **Obsidian** with **Flint and Steel** or a **Fire Charge**.
+- You can construct complex traversal systems for the **Nether** by building hubs and linking portals. [[Reference.]](https://youtu.be/K94789i0zRk)
+- Wearing any piece of **Gold Armor** will make all **Piglins** passive to you. Opening any of their **Chests** negates this effect.
+- **Zombified Piglins** are passive until you injure one. In which case, all in a `48` block radius will gang up and attack you. They'll remain aggressive until they kill you. Sometimes, it's best to just let them kill you so they'll return to being passive.
+- For food, **Hoglins** drop **Raw Pork Chops**. To cook these, **Furnaces** can be crafted from **Blackstone**. To fuel the **Furnace**, you can use **Coal** from **Wither Skeletons** or simply bring a **Bucket** with you and harvest the plentiful **Lava**. You can also collect **Brown Mushrooms** and **Red Mushrooms**, as well as a few Nether logs (**Crimson Stem** or **Warped Stem**). Craft the logs into planks, make a crafting table, craft some bowls, and then craft **Mushroom Stew** with the **Bowls** and **Mushrooms** (one of each **Brown** and **Red**).
+- To avoid fire damage, especially the blue flames of **Soul Fire** which deal `2.0x` damage than normal fire, you can brew and drink **Potions of Fire Resistance**. These **Potions** can also be obtained by trading with **Piglins**. Uniquely, **Netherite Armor** gives a small (but not limitless) boost to fire resistance. The ore to turn **Diamond** into **Netherite** is stupid rare, but well worth the work to find and mine.
+- To avoid getting lost, which is almost always fatal, the old screenshot trick works wonders. Walk next to your portal, press `F3` to bring up the debug menu, then press `F2` to screenshot. The coordinates listed are where your portal is, and you can always travel back there. For a more hands-on approach, a lot of players mark paths back to places with contrasting (usually non-natural) blocks, like **Torches**, **Warped Planks**, or **Crimson Planks**. These make paths a lot more obvious, as opposed to just placing some **Crimson Planks** atop **Netherrack**, both of which have similar colors and are thus less obvious. **Lodestones** are an expensive but very useful way of tracking back to important places like **Nether Portals**.
+- A **Respawn Anchor** acts as a **Bed** for the **Nether**. They're not cheap, but are super useful when doing a lot of **Nether** spelunking. They can be crafted using **Crying Obsidian** and **Glowstone**. You can get **Crying Obsidian** from trading with **Piglins**, and **Glowstone** grows on the ceilings of the **Nether**. To use one, craft and place it, then click `RMB` while holding **Glowstone** `1` to `4` times. Each anchor can hold four charges of **Glowstone**, and each charge is good for one respawn.
+
+### Biomes
+
+Biome | Dimension | Unique Feature(s)
+:--- | --- | ---
+Nether Wastes | Nether | - Large amounts of exposed **Nether Quartz Ore** and **Nether Gold Ore**.<br><br>- Large numbers of **Piglins**, **Zombified Piglins**, and **Ghasts**. Despite having less **Piglins** in general, it's best to make portal farms here because there's no **Hoglins**.
+Soul Sand Valley | Nether | - Rare **Skeletons** and **Ghasts**.<br><br>- Large amounts of **Bone Blocks**.<br><br>- **Nether Fortresses** that spawn here have mob concentrations greater than normal.
+Crimson Forest | Nether | - Only place **Crimson Stem** can be found.<br><br>- More **Piglins** than any other biome.<br><br>**Hoglins** spawn here.
+Warped Forest | Nether | - **Enderman** is the only hostile mob that spawns here.<br><br>Only place to find **Warped Stem** and **Twisted Vines**.
+Basalt Deltas | Nether | - Large amounts of **Basalt** and **Blackstone**.<br><br>Large number of **Magma Cubes**.
+
+### Alchemy/Brewing
+
+Brewing potions requires a **Brewing Stand**. A full tree chart of potions can be found on the [[Minecraft Fandom Wiki]](https://minecraft.fandom.com/wiki/Brewing).
+
+Ingredient | Effect/Purpose | Location(s)
+:--- | --- | ---
+Milk Bucket | Removes all effects.
+Nether Wart | Base **Awkward Potion**. | Nether Fortress<br>Bastion Remnant<br>Soul Sand (Crop)
+Blaze Powder | Fuel for **Brewing Stand**. | [Blaze](#blaze)
+Gunpowder | Turns potions into **Splash** variant. | [Creeper](#creeper)<br>[Witch](#witch)
+Redstone Dust | Increases effect **Duration**. | [Redstone Ore](#ore-depths-and-biomes)<br>[Witch](#witch)<br>Jungle Pyramid<br>Woodland Mansion<br>Ancient City
+Glowstone Dust | Increases effect **Potency**. | **Glowstone**<br>[Witch](#witch)
+Fermented Spider Eye | Reverses potion's effect. | **Spider Eye + Sugar + Brown Mushroom**
+Pufferfish | *Water Breathing* | [Fishing](#)
+Golden Carrot | *Night Vision* | -
+
+### Enchanting
+
+Enchantment | Max Level | Equipment | Effect(s)
+:--- | --- | --- | ---
+Aqua Affinity | I | Helmets | Increases underwater mining speed.
+Bane of Arthropods | 
+
+### Villager Trades
+
+You can spawn a villager with a custom profession and trades:
+
+Profession | Level | Type | Offers | Command
+:--- | --- | --- | --- | ---
+Mason | 5 | Swamp | 3 Emerald + 2 Diamond = 1 Music Disc<br>16 Diamond = Neth. Chestplate (Prot4, Unbr3, Mend1) | `/summon villager ~ ~1 ~ {VillagerData:{profession:mason,level:5,type:swamp},CustomName:"\"Trader\"",Offers:{Recipes:[{buy:{id:emerald,Count:3},buyB:{id:diamond,Count:2},sell:{id:music_disc_chirp,Count:1,tag:{display:{Name:"\"Chirp\"",Lore:["\"Jazzy\""]}}},rewardExp:0b,maxUses:9999999},{buy:{id:diamond,Count:16},sell:{id:netherite_chestplate,Count:1,tag:{Enchantments:[{id:protection,lvl:4},{id:unbreaking,lvl:3},{id:mending,lvl:1}]}},rewardExp:0b,maxUses:9999999}]}}`
+Armorer | 5 | Swamp | `emerald_block` + 10 `gold_ingot` = `golden_helmet`<br>`emerald_block` + 10 `diamond` = `diamond_helmet`<br>`emerald_block` + 16 `diamond` = `diamond_chestplate`<br> `emerald_block` + 14 `diamond` = `diamond_leggings` | `emerald_block` + 8 `diamond` = `diamond_boots`<br>`emerald_block` + 4 `diamond` = `diamond_sword`<br>`emerald_block` + `bow` = `bow` | `summon villager ~ ~1 ~ {VillagerData:{profession:armorer,level:5,type:swamp},Offers:{Recipes:[{buy:{id:emerald_block,Count:1},buyB:{id:gold_ingot,Count:10},sell:{id:golden_helmet,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:protection,lvl:4},{id:thorns,lvl:3},{id:respiration,lvl:3},{id:aqua_affinity,lvl:1}]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:diamond,Count:10},sell:{id:diamond_helmet,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:protection,lvl:4},{id:thorns,lvl:3},{id:respiration,lvl:3}]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:diamond,Count:16},sell:{id:diamond_chestplate,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:protection,lvl:4},{id:thorns,lvl:3}]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:diamond,Count:14},sell:{id:diamond_leggings,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:protection,lvl:4},{id:thorns,lvl:3},{id:swift_sneak,lvl:3}]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:diamond,Count:8},sell:{id:diamond_boots,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:protection,lvl:4},{id:thorns,lvl:3},{id:feather_falling,lvl:4},{id:depth_strider,lvl:3},{id:soul_speed,lvl:3},]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:shield,Count:1},sell:{id:shield,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3}]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:bow,Count:1},sell:{id:bow,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:power,lvl:5},{id:punch,lvl:2},{id:flame,lvl:1}]}},rewardExp:0b,maxUses:9999999}]}}`
+Toolsmith | 5 | Swamp | `emerald_block` + 6 `diamond` = `diamond_axe`<br>`emerald_block` + 6 `diamond` = `diamond_pickaxe`<br>`emerald_block` + 4 `diamond` = `diamond_hoe`<br>`emerald_block` + `elytra` = `elytra`<br>`emerald_block` + `shield` = `shield`<br>`emerald_block` + `shears` = `shears`<br>`emerald_block` + `fishing_rod` = `fishing_rod` | `summon villager ~ ~1 ~ {VillagerData:{profession:toolsmith,level:5,type:swamp},Offers:{Recipes:[{buy:{id:emerald_block,Count:1},buyB:{id:diamond,Count:6},sell:{id:diamond_pickaxe,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:efficiency,lvl:5},{id:silk_touch,lvl:1}]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:diamond,Count:6},sell:{id:diamond_pickaxe,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:efficiency,lvl:5},{id:fortune,lvl:3}]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:diamond,Count:6},sell:{id:diamond_axe,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:efficiency,lvl:5},{id:fortune,lvl:3}]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:diamond,Count:2},sell:{id:diamond_shovel,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:efficiency,lvl:5},{id:fortune,lvl:3}]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:diamond,Count:6},sell:{id:diamond_hoe,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:efficiency,lvl:5},{id:fortune,lvl:3}]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:diamond,Count:10},sell:{id:elytra,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:fishing_rod,Count:1},sell:{id:fishing_rod,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:lure,lvl:3},{id:luck_of_the_sea,lvl:3}]}},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:1},buyB:{id:shears,Count:1},sell:{id:shears,Count:1,tag:{Enchantments:[{id:mending,lvl:1},{id:unbreaking,lvl:3},{id:efficiency,lvl:5},]}},rewardExp:0b,maxUses:9999999}]}}`
+Mason | 5 | Swamp | - | `summon villager ~ ~1 ~ {VillagerData:{profession:mason,level:5,type:swamp},Offers:{Recipes:[{buy:{id:coal_block,Count:4},sell:{id:raw_copper_block,Count:1},rewardExp:0b,maxUses:9999999},{buy:{id:copper_block,Count:4},sell:{id:redstone_block,Count:1},rewardExp:0b,maxUses:9999999},{buy:{id:redstone_block,Count:4},sell:{id:iron_block,Count:1},rewardExp:0b,maxUses:9999999},{buy:{id:iron_block,Count:4},sell:{id:gold_block,Count:1},rewardExp:0b,maxUses:9999999},{buy:{id:gold_block,Count:4},sell:{id:emerald,Count:8},rewardExp:0b,maxUses:9999999},{buy:{id:emerald_block,Count:4},sell:{id:diamond_block,Count:1},rewardExp:0b,maxUses:9999999},]}}`
+
+Here's a template for a Villager spawn command:
+
+```
+summon villager ~ ~1 ~ {
+    VillagerData:
+    {
+        profession:armorer,
+        level:5,
+        type:swamp
+    },
+    Offers:
+    {
+        Recipes:
+        [
+            {
+                buy:{id:emerald_block,Count:1},
+                buyB:{id:gold_ingot,Count:10},
+                sell:{
+                    id:golden_helmet,
+                    Count:1,
+                    tag:{
+                        Enchantments:[
+                            {id:mending,lvl:1},
+                            {id:unbreaking,lvl:3},
+                            {id:protection,lvl:4},
+                            {id:thorns,lvl:3},
+                            {id:respiration,lvl:3},
+                            {id:aqua_affinity,lvl:1}
+                        ]
+                    }
+                },
+                rewardExp:0b,
+                maxUses:9999999
+            },
+            {
+                    buy:{id:emerald_block,Count:1},
+                    buyB:{id:diamond,Count:10},
+                    sell:{
+                        id:diamond_helmet,
+                        Count:1,
+                        tag:{
+                            Enchantments:[
+                                {id:mending,lvl:1},
+                                {id:unbreaking,lvl:3},
+                                {id:protection,lvl:4},
+                                {id:thorns,lvl:3},
+                                {id:respiration,lvl:3}
+                            ]
+                        }
+                    },
+                    rewardExp:0b,
+                    maxUses:9999999
+                },
+                {
+                    buy:{id:emerald_block,Count:1},
+                    buyB:{id:diamond,Count:16},
+                    sell:{
+                        id:diamond_chestplate,
+                        Count:1,
+                        tag:{
+                            Enchantments:[
+                                {id:mending,lvl:1},
+                                {id:unbreaking,lvl:3},
+                                {id:protection,lvl:4},
+                                {id:thorns,lvl:3}
+                            ]
+                        }
+                    },
+                    rewardExp:0b,
+                    maxUses:9999999
+                },
+                {
+                    buy:{id:emerald_block,Count:1},
+                    buyB:{id:diamond,Count:14},
+                    sell:{
+                        id:diamond_leggings,
+                        Count:1,
+                        tag:{
+                            Enchantments:[
+                                {id:mending,lvl:1},
+                                {id:unbreaking,lvl:3},
+                                {id:protection,lvl:4},
+                                {id:thorns,lvl:3},
+                                {id:swift_sneak,lvl:3}
+                            ]
+                        }
+                    },
+                    rewardExp:0b,
+                    maxUses:9999999
+                },
+                {
+                    buy:{id:emerald_block,Count:1},
+                    buyB:{id:diamond,Count:8},
+                    sell:{
+                        id:diamond_boots,
+                        Count:1,
+                        tag:{
+                            Enchantments:[
+                                {id:mending,lvl:1},
+                                {id:unbreaking,lvl:3},
+                                {id:protection,lvl:4},
+                                {id:thorns,lvl:3},
+                                {id:feather_falling,lvl:4},
+                                {id:depth_strider,lvl:3},
+                                {id:soul_speed,lvl:3},
+                            ]
+                        }
+                    },
+                    rewardExp:0b,
+                    maxUses:9999999
+                },
+                {
+                    buy:{id:emerald_block,Count:1},
+                    buyB:{id:shield,Count:1},
+                    sell:{
+                        id:shield,
+                        Count:1,
+                        tag:{
+                            Enchantments:[
+                                {id:mending,lvl:1},
+                                {id:unbreaking,lvl:3}
+                            ]
+                        }
+                    },
+                    rewardExp:0b,
+                    maxUses:9999999
+                }
+        ]
+	}
+}
+```
+
+Below are enchantment identifiers and levels:
+
+Identifier | Max Level
+:--- | ---
+`mending` | 1
+`unbreaking` | 3
+`protection` | 4
+`thorns` | 3
+`respiration` | 3
+`aqua_affinity` | 1
+`feather_falling` | 4
+`soul_speed` | 3
+`frost_walker` | 2
+`depth_strider` | 3
+`sharpness` | 5
+`knockback` | 2
+`fire_aspect` | 2
+`looting` | 3
+`sweeping_edge` | 3
+`efficiency` | 5
+`fortune` | 3
+`silk_touch` | 1
+`lure` | 3
+`luck_of_the_sea` | 3
+`power` | 5
+`punch` | 2
+`flame` | 1
+
+### Commands
+
+Commands need to be prefaced by a `/` when used in chat console. They do not need this when used from **Command Blocks**.
+
+Command | Syntax | Details/Examples
+:--- | --- | ---
+clear | - | Clears player inventory.
+gamerule | `gamerule <rule name> [<value>]` | Sets or queries a game rule value.<br>`/gamerule doDaylightCycle true`<br>`/gamerule doInsomnia true`<br>`/gamerule doImmediateRespawn false`<br>`/gamerule doWeatherCycle true`<br>`/gamerule keepInventory false`<br>`/gamerule mobGriefing true`<br>`/gamerule randomTickSpeed 3`<br>`/gamerule `<br>`gamerule showCoordinates true`<br>
+give | `/give @s minecraft:command_block` | Gives specified player an item.
+locate | `/locate structure <structure>`<br>`/locate biome <biome>`<br>`/locate poi <poi>` | Locate structures, biomes, or POIs.
+playsound | `playsound` | Plays specified sound at given location.<br><br>`/playsound minecraft:ambient.cave master @s ~ ~ ~`
+seed | - | Displays world seed. You might need to enable cheats for this to work as intended.
+setworldspawn | `/setworldspawn [<pos>] [<angle>]` | Sets world spawn.
+spawnpoint | `/spawnpoint [<targets>] [<pos>] [<angle>]` | Sets player spawnpoint. Works in all dimensions.
+summon | `summon <entity> [<pos>] [<nbt>]` | `/summon spider ~ ~ ~ {Passengers:[{id:"minecraft:skeleton",HandItems:[{id:"minecraft:bow",Count:1b}]}]}`<br><br>`/summon villager ~ ~1 ~ {VillagerData:{profession:mason,level:5,type:swamp},CustomName:"\"Trader\"",Offers:{Recipes:[{buy:{id:emerald,Count:3},buyB:{id:diamond,Count:2},sell:{id:music_disc_chirp,Count:1,tag:{display:{Name:"\"Chirp\"",Lore:["\"Jazzy\""]}}},rewardExp:0b,maxUses:9999999},{buy:{id:diamond,Count:16},sell:{id:netherite_chestplate,Count:1,tag:{Enchantments:[{id:protection,lvl:4},{id:unbreaking,lvl:3},{id:mending,lvl:1}]}},rewardExp:0b,maxUses:9999999}]}}`
+tp | `/tp @s <destination>` | Teleports to the given coordinates.
+time | `/time add <time>`<br>`/time query (daytime|gametime|day)`<br>`/time set (day|night|noon|midnight)`<br>`/time set <time>` | Adds, queries, or sets time.
+weather | `/weather (clear|rain|thunder) [<duration>]` | Sets weather.
+
+### Functional Setups
+
+`Fun`ctional stuff to build.
+
+Thing | Items Needed | Setup
+:--- | --- | ---
+Redstone Inverter | **Redstone Torch**<br>Any **Solid Block** | Place the **Restone Torch** on any side of any **Solid Block**. Leading any Redstone signal to the solid block will turn off the torch.
+Redstone Clock | 2 **Observer** | Place both **Observers** facing each other.
+Semi-Auto<br>Door | **Door**<br>**Button** | Place any **Button** on a wall next to any **Door**.
+Full-Auto<br>Door | **Door**<br>**Pressure Plate** | Place any **Pressure Plate** both in front of and behind any **Door**.
+Hidden Door | **Painting** | Place any painting over a hole to hide an entrance way.
+Bubble Elevator | **Water Bucket**<br>**Kelp**<br>**Soul Sand** | Place a water source at the top of any `1x1` column, then plant **Kelp** at the base. Break the **Kelp**, then place one block of **Soul Sand** at the base.
+Crawl Forcer | **Trapdoor**<br>or **Piston** | Place either of the two above  a `2` block high space, close/extend it, and crawl into any `1` block high space. Crawl speed can be improved with the **Swift Sneak** enchantment.
+Fast Travel | **Nether Portal**<br>**Boat**<br>**Blue Ice** | Each block traversed in the **Nether** is equal to `8` blocks of travel in the **Overworld**. You can exploit this to travel stupid long distances quickly. Dig a `2x3` flat tunnel of any length in the **Nether**, then place a block of **Blue Ice** on the corner of the entrance. (**Blue Ice** allows **Boats** to travel significantly faster than regular **Ice** and **Compact Ice**.) Progressively place another block of **Blue Ice** `2` blocks forward and `1` across to make a hopscotch-esque pattern. This works because the **Boat** can rest on these spaces between the **Blue Ice**. Spawnproofing these linked portal tunnel networks is as simple as placing **Slabs** atop the solid surfaces and **Buttons** atop the **Blue Ice**. The **Slabs** prevent entities from spawning atop solid blocks. The **Buttons** also prevent spawning, but also allow the **Boat** to glide across the **Blue Ice**. [[Reference.]](https://youtu.be/K94789i0zRk)
+Hidden Water Source | **Stairs**<br>**Water Bucket** | Place any **Stairs** in a `1x3x1` pattern with the high side facing towards you. Waterlog (fill) the stairs with **Water Buckets**, then cover the **Stairs** with any solid block to hide any visible water.
+Renewable Water<br>+ Lava Source | `1` **Cauldron**<br>`1` **Pointed Dripstone**<br>`1` **Lava/Water Bucket** | Dig a `1x1x4` hole. Place the **Cauldron** at the bottom. Place some solid block `2` blocks above the **Cauldron**. Place the **Pointed Dripstone** on the bottom of that solid block, then fill the top `1` block hole with **Lava** or **Water**. The lava/water will seep through the block, go down the **Pointed Dripstone**, and drip into the **Cauldron**. It takes a long time to drip fill a single **Cauldron**, so this is best done with multiple **Cauldrons** in a row. Bear in mind that lava/water will not seep through the block unless a **Water Source** is directly above it.
+Renewable Water +<br>Powder Snow Source | `1` Cauldron | Just place it outside. When it rains, it will fill with water over time.
+Hidden<br>Farmland<br>Irrigation | **Water Bucket**<br>**Carpet/Slab/Leaves** | You can keep a full water source block by covering the water sources with top **Slabs** **Leaf** Blocks, or **Carpet**.
+Automatic Respawn Anchor | `2` **Observer Blocks**<br>`1` **Dispenser**<br>`1` **Respawn Anchor**<br>**Glowstone** | This is a `1x4x1` layout. Place the **Respawn Anchor**, then a **Dispenser** next to and facing the **Respawn Anchor**, then an **Observer** next to but facing away from the **Dispenser**, then a second **Observer** next to and facing the first **Observer** (to make an "Observer Clock"). Fill the **Dispenser** with **Glowstone** blocks. As long as there is **Glowstone** in the **Dispenser**, your **Respawn Anchor** will always be fully charged.
+
+### Linking Nether Portals
+
+1. Build a portal in overworld. Screenshot or write down coordinates of bottom left block.
+2. Light and enter.
+3. Divide overworld coordinates by `8`. Round down if decimal `< 0.5`, round up if `> 0.5`. Check coordinates of same block in Nether. If they don't match, move portal in Nether to match and re-light.
+4. Create new portal in Overworld. Do not light. Mark coordinates of it.
+5. Enter old portal back to Nether.
+6. Create new portal in Nether matching coordinates of overworld **DIVIDED BY** `8`.
+7. Light new portal in Nether. Do not enter.
+8. Travel back to Overworld through original portal in Nether.
+9. Light the new portal in Overworld.
+
+### Buried Treasure Maps
+
+*These can be found in wrecked Pirate Ship structures which generate in and under water. There's also a reliable way to always find the buried treasure:*
+
+1. Obtain a **Buried Treasure Map**.
+2. Travel to where your player location blip is directly centered over the `X`.
+3. Press `F3` + `G` to show chunk borders.
+4. Travel to the northwest corner of the current chunk you're in.
+5. Travel south `10` blocks.
+6. Travel east `10` blocks.
+7. Dig straight down. If you don't immediately find the **Chest** after `10` or so blocks down, dig around the area as it's almost always guaranteed to be somewhere in a `4x4` block radius down below that area.
+
+# Extras
+
+*References and such.*
+
+### Seed Mappers
+
+*These allow you to browse Minecraft worlds, block by block, by simply inserting the seed.*
+
+Tool | Details
+:--- | ---
+[ChunkBase](https://www.chunkbase.com/) | Online seed mapper.
+[Cubiomes Viewer](https://github.com/Cubitect/cubiomes-viewer) | Offline seed mapper coded in C++ but usable with **Java Edition** seeds.
+
+### Shortcuts
+
+Key(s) | Details
+:--- | ---
+`F3` | Debug Menu
+`F3` + `F4` | Cycle through game modes.
+`F3` + `G` | Show chunk borders.
+`F3` + `A` | Reload all chunks.
+`F3` + `T` | Reload all textures, sounds, and web-loaded client resources.
+`F3` + `H` | Toggle detailed item descriptions.
+`F3` + `C` | Copies player coordinates and rotation as a `/tp` command.
+`F3` + `C`<br>>6 seconds | Trigger a manual debug crash.
+`F3` + `B` | Show hitboxes.
+`F3` + `D` | Clears chat, including past commands.
+
+### Bypass Launcher
+
+Looking to run Minecraft without an internet connection? Or just need to bypass the launcher for any other reason? Here's how:
+
+*You'll need a launcher to get this set up, but once done you'll no longer need the launcher. This process must be completed for each version of Minecraft you want to run without the launcher. Yes, including Forge/Fabric versions.*
+
+The original method I found was devised with Batch. [[Reference.]](https://gaming.stackexchange.com/a/306709)
+<br>Below is a method I've modified to work with VBScript to avoid having a CMD window present while playing. [[Reference.]](https://stackoverflow.com/a/1340372)
+
+1. Download [Process Explorer](https://learn.microsoft.com/en-us/sysinternals/downloads/process-explorer). [[Direct.]](https://download.sysinternals.com/files/ProcessExplorer.zip) [[Backup of v17.02]](https://mega.nz/file/eIVn1KzD#fmJSWMmnjIlPoHbZFXt_L46M-dbACxdCfnZPMDqdldU)
+2. Create a blank **VBScript** in your `.minecraft` directory. I just rename a blank text document as `Minecraft.vbs`, for example.
+3. Right click the script, click `Edit`, and paste the following code into the script:
+
+[[GitHub Backup]](https://github.com/subvod/examples/blob/master/RunExternalApp.vbs)
+
+```
+Dim objShell
+Set objShell = WScript.CreateObject( "WScript.Shell" )
+objShell.Run("javaw.exe" & " -args")
+Set objShell = Nothing
+```
+
+4. Run the **Minecraft Launcher** and launch the **exact** version and configuration which you want to use. Yes, **Forge**, **Fabric**, etc make a difference. Those add a bunch more libraries to the command line.
+5. Run **Process Explorer** and find the **Minecraft** process (it'll be a `javaw.exe` process).
+6. Double-click on the process to view details and copy the command line used to run it. If you have two or more processes running through `javaw.exe`, it's gonna be the one with the longest command line.
+7. Replace the `javaw.exe` within the quotes with the full application path of `javaw.exe` at the beginning of the command you copied from **Process Explorer**. Newer launcher versions will automatically download the latest JVM from Mojang. For example, mine is: `C:\Users\Admin\AppData\Roaming\.minecraft\runtime\temurin-latest-windows-x64\bin\javaw.exe`. If the path to your `javaw.exe` contains spaces, you need to triple quote the path (just to the executable, not the arguments), i.e.
+```
+objShell.Run("""C:\Program Files\Java\bin\javaw.exe""" & " -args")
+```
+8. Replace the `-args` in the second pair of quotes with all of the arguments. (The rest of the command you copied). Remember to keep that first space after the open quote to separate the executable path from the arguments.
+9. With Minecraft still open, navigate to `.minecraft\versions\1.19.3-forge-44.1.16` (or whatever version you want to add a launcher bypass for) and copy-paste or archive (in a `.zip`) the `1.19.3-forge-44.1.16-natives-2538478...` folder. Those are all of the natives which that version needs to run properly. I usually just send them to a `.7z` archive and unzip them back with the same folder name after I close the game.
+10. Close **Minecraft** and **Process Explorer**, then double click your new `.vbs` script file and see if everything works. If running the script does not boot up the game but the **Minecraft Launcher** does, you've either done something wrong with the command line in the script or somehow didn't give the script file access permissions for the directory you have **Minecraft** located in.
+11. (OPTIONAL) If you want to have a fancy icon, just create a shortcut to the Batch script, right click the shortcut, and click `Change Icon...`.
+
+Your arguments line copied from **Process Explorer** will be very long (especially with **Forge** versions) so don't get flustered if your `objShell.Run()` function in the final script looks something like this:
+
+`Set objShell = WScript.CreateObject( "WScript.Shell" )
+objShell.Run("C:\Users\Admin\AppData\Roaming\.minecraft\runtime\temurin-latest-windows-x64\bin\javaw.exe" & " -Xmx2G -XX:+UnlockExperimentalVMOptions -XX:+UseG1GC -XX:G1NewSizePercent=20 -XX:G1ReservePercent=20 -XX:MaxGCPauseMillis=50 -XX:G1HeapRegionSize=32M -XX:HeapDumpPath=MojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump -Djava.library.path=C:\Users\Admin\AppData\Roaming\.minecraft\versions\1.19.3-forge-44.1.16\1.19.3-forge-44.1.16-natives-27449293142100 -Dminecraft.launcher.brand=java-minecraft-launcher -Dminecraft.launcher.version=unknown -cp C:\Users\Admin\AppData\Roaming\.minecraft\libraries\cpw\mods\securejarhandler\2.1.6\securejarhandler-2.1.6.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\ow2\asm\asm\9.3\asm-9.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\ow2\asm\asm-commons\9.3\asm-commons-9.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\ow2\asm\asm-tree\9.3\asm-tree-9.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\ow2\asm\asm-util\9.3\asm-util-9.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\ow2\asm\asm-analysis\9.3\asm-analysis-9.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\minecraftforge\accesstransformers\8.0.4\accesstransformers-8.0.4.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\antlr\antlr4-runtime\4.9.1\antlr4-runtime-4.9.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\minecraftforge\eventbus\6.0.3\eventbus-6.0.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\minecraftforge\forgespi\6.0.0\forgespi-6.0.0.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\minecraftforge\coremods\5.0.1\coremods-5.0.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\cpw\mods\modlauncher\10.0.8\modlauncher-10.0.8.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\minecraftforge\unsafe\0.2.0\unsafe-0.2.0.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\electronwill\night-config\core\3.6.4\core-3.6.4.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\electronwill\night-config\toml\3.6.4\toml-3.6.4.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\apache\maven\maven-artifact\3.8.5\maven-artifact-3.8.5.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\jodah\typetools\0.8.3\typetools-0.8.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\minecrell\terminalconsoleappender\1.2.0\terminalconsoleappender-1.2.0.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\jline\jline-reader\3.12.1\jline-reader-3.12.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\jline\jline-terminal\3.12.1\jline-terminal-3.12.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\spongepowered\mixin\0.8.5\mixin-0.8.5.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\openjdk\nashorn\nashorn-core\15.3\nashorn-core-15.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\minecraftforge\JarJarSelector\0.3.19\JarJarSelector-0.3.19.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\minecraftforge\JarJarMetadata\0.3.19\JarJarMetadata-0.3.19.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\cpw\mods\bootstraplauncher\1.1.2\bootstraplauncher-1.1.2.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\minecraftforge\JarJarFileSystems\0.3.19\JarJarFileSystems-0.3.19.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\minecraftforge\fmlloader\1.19.3-44.1.16\fmlloader-1.19.3-44.1.16.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\github\oshi\oshi-core\6.2.2\oshi-core-6.2.2.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\google\code\gson\gson\2.10\gson-2.10.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\google\guava\failureaccess\1.0.1\failureaccess-1.0.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\google\guava\guava\31.1-jre\guava-31.1-jre.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\ibm\icu\icu4j\71.1\icu4j-71.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\mojang\authlib\3.16.29\authlib-3.16.29.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\mojang\blocklist\1.0.10\blocklist-1.0.10.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\mojang\brigadier\1.0.18\brigadier-1.0.18.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\mojang\datafixerupper\5.0.28\datafixerupper-5.0.28.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\mojang\javabridge\2.0.25\javabridge-2.0.25.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\mojang\logging\1.1.1\logging-1.1.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\com\mojang\text2speech\1.13.9\text2speech-1.13.9.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\commons-codec\commons-codec\1.15\commons-codec-1.15.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\commons-io\commons-io\2.11.0\commons-io-2.11.0.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\commons-logging\commons-logging\1.2\commons-logging-1.2.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\io\netty\netty-buffer\4.1.82.Final\netty-buffer-4.1.82.Final.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\io\netty\netty-codec\4.1.82.Final\netty-codec-4.1.82.Final.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\io\netty\netty-common\4.1.82.Final\netty-common-4.1.82.Final.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\io\netty\netty-handler\4.1.82.Final\netty-handler-4.1.82.Final.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\io\netty\netty-resolver\4.1.82.Final\netty-resolver-4.1.82.Final.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\io\netty\netty-transport-classes-epoll\4.1.82.Final\netty-transport-classes-epoll-4.1.82.Final.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\io\netty\netty-transport-native-unix-common\4.1.82.Final\netty-transport-native-unix-common-4.1.82.Final.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\io\netty\netty-transport\4.1.82.Final\netty-transport-4.1.82.Final.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\it\unimi\dsi\fastutil\8.5.9\fastutil-8.5.9.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\java\dev\jna\jna-platform\5.12.1\jna-platform-5.12.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\java\dev\jna\jna\5.12.1\jna-5.12.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\net\sf\jopt-simple\jopt-simple\5.0.4\jopt-simple-5.0.4.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\apache\commons\commons-compress\1.21\commons-compress-1.21.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\apache\commons\commons-lang3\3.12.0\commons-lang3-3.12.0.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\apache\httpcomponents\httpclient\4.5.13\httpclient-4.5.13.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\apache\httpcomponents\httpcore\4.4.15\httpcore-4.4.15.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\apache\logging\log4j\log4j-api\2.19.0\log4j-api-2.19.0.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\apache\logging\log4j\log4j-core\2.19.0\log4j-core-2.19.0.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\apache\logging\log4j\log4j-slf4j2-impl\2.19.0\log4j-slf4j2-impl-2.19.0.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\joml\joml\1.10.5\joml-1.10.5.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\lwjgl\lwjgl-glfw\3.3.1\lwjgl-glfw-3.3.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\lwjgl\lwjgl-jemalloc\3.3.1\lwjgl-jemalloc-3.3.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\lwjgl\lwjgl-openal\3.3.1\lwjgl-openal-3.3.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\lwjgl\lwjgl-opengl\3.3.1\lwjgl-opengl-3.3.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\lwjgl\lwjgl-stb\3.3.1\lwjgl-stb-3.3.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\lwjgl\lwjgl-tinyfd\3.3.1\lwjgl-tinyfd-3.3.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\lwjgl\lwjgl\3.3.1\lwjgl-3.3.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries\org\slf4j\slf4j-api\2.0.1\slf4j-api-2.0.1.jar;C:\Users\Admin\AppData\Roaming\.minecraft\versions\1.19.3-forge-44.1.16\1.19.3-forge-44.1.16.jar -Djava.net.preferIPv6Addresses=system -DignoreList=bootstraplauncher,securejarhandler,asm-commons,asm-util,asm-analysis,asm-tree,asm,JarJarFileSystems,client-extra,fmlcore,javafmllanguage,lowcodelanguage,mclanguage,forge-,1.19.3-forge-44.1.16.jar -DmergeModules=jna-5.10.0.jar,jna-platform-5.10.0.jar -DlibraryDirectory=C:\Users\Admin\AppData\Roaming\.minecraft\libraries -p C:\Users\Admin\AppData\Roaming\.minecraft\libraries/cpw/mods/bootstraplauncher/1.1.2/bootstraplauncher-1.1.2.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries/cpw/mods/securejarhandler/2.1.6/securejarhandler-2.1.6.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries/org/ow2/asm/asm-commons/9.3/asm-commons-9.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries/org/ow2/asm/asm-util/9.3/asm-util-9.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries/org/ow2/asm/asm-analysis/9.3/asm-analysis-9.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries/org/ow2/asm/asm-tree/9.3/asm-tree-9.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries/org/ow2/asm/asm/9.3/asm-9.3.jar;C:\Users\Admin\AppData\Roaming\.minecraft\libraries/net/minecraftforge/JarJarFileSystems/0.3.19/JarJarFileSystems-0.3.19.jar --add-modules ALL-MODULE-PATH --add-opens java.base/java.util.jar=cpw.mods.securejarhandler --add-opens java.base/java.lang.invoke=cpw.mods.securejarhandler --add-exports java.base/sun.security.util=cpw.mods.securejarhandler --add-exports jdk.naming.dns/com.sun.jndi.dns=java.naming cpw.mods.bootstraplauncher.BootstrapLauncher --username Admin --version 1.19.3-forge-44.1.16 --gameDir C:\Users\Admin\AppData\Roaming\.minecraft --assetsDir C:\Users\Admin\AppData\Roaming\.minecraft\assets --assetIndex 2 --uuid bunchOfRandomChars --accessToken bunchOfRandomNumbers --clientId ${clientid} --xuid ${auth_xuid} --userType legacy --versionType release --launchTarget forgeclient --fml.forgeVersion 44.1.16 --fml.mcVersion 1.19.3 --fml.forgeGroup net.minecraftforge --fml.mcpVersion 20221207.122022")`
+
+### Creating Resource Packs
+
+Resource packs may use either TOML or JSON depending on the version of Minecraft it was made for. You can usually use a converter seamlessly between languages. [[TOML-JSON Converter on GitHub]](https://esakat.github.io/toml2jsonConverter/)
+
+The **pack_format** variable defines the version(s) of Minecraft some packs are compatible with. [[Reference.]](https://minecraft.fandom.com/wiki/Pack_format) The idenfitier digits change between **Resource Packs** and **Data Packs**.
+
+The `description` field is the text that will be shown in the Resource Packs menu. Using a section character `§` (typed as `\u00a7` in JSON code) allows formatting.
+
+pack_format | Minecraft Version(s)<br>(Resource Packs) | Minecraft Version(s)<br>(Data Packs)
+:--- | --- | ---
+1 | 1.6.1–1.8.9 | -
+2 | 1.9–1.10.2 | -
+3 | 1.11–1.12.2 | -
+4 | 1.13–1.14.4 | 1.13-1.14.4
+5 | 1.15–1.16.1 | 1.15-1.16.1
+6 | 1.16.2–1.16.5 | 1.16.2-1.16.5
+7 | 1.17.x | 1.17-1.17.1
+8 | 1.18.x | 1.18-1.18.1
+9 | 1.19-1.19.2 | 1.18.2
+10 | - | 1.19-1.19.3
+11 | 22w42a-22w44a | 1.19.4
+12 | 1.19.3-1.19.4 | -
+
+**To change your player skin (locally) via resource pack:**
+
+1. Copy and paste your Minecraft version's `.jar` file into the `resourcepacks` folder.
+2. Change its extension to `.zip`.
+3. Open the Minecraft version's `.jar` file with an archiving tool like 7-Zip.
+4. Delete all files and folders except the `assets` folder.
+5. Navigate to `assets\minecraft\textures\entity\player.` You can delete any other files/folders in any of these subdirectories.
+6. The `wide` folder uses classic skins with 4px arms. The `slim` folder uses sleek skins with 3px arms.
+7. Extract any player skin you want to mod and replace it with the same file name and extension.
+8. (OPTIONAL) To change the pack icon, just add a `pack.png` image as long as its size is a power of `2`. A `64x64` icon will work, for example.
+9. Start up Minecraft and load up your resource pack.
+
+# Mods
+
+*Some personal recommendations. All of these are Forge-oriented. Don't be hipster for Fabric. Forge has worked just fine all these years.*
+
+Mod | Details
+:--- | ---
+[VanillaTweaks](https://vanillatweaks.net/) | *Changes and improvements to Vanilla Minecraft.*
+[Forge](https://files.minecraftforge.net/net/minecraftforge/forge/) | *Base modding toolkit since v1.4. Comes packaged as a Java installer, but it's streamlined and straighforward.*
+[JEI](https://www.curseforge.com/minecraft/mc-mods/jei) | *Item and recipe viewing mod. Built from the ground up for stability and performance.*
+[Climb Ladders Fast](https://www.curseforge.com/minecraft/mc-mods/climb-ladders-fast) | *Very simple and efficient mod to climb ladders faster. Also works with vines.*
+[Sound Physics Remastered](https://www.curseforge.com/minecraft/mc-mods/sound-physics-remastered) | *Provides realistic sound attenuation, reverberation, and absorption through blocks.*
+[JourneyMap](https://www.curseforge.com/minecraft/mc-mods/journeymap) | *Client+server mod for Forge or Fabric and Quilt which maps your Minecraft world in real-time as you explore. You can view the map in a web browser or in-game as a Minimap or full-screen.*
+[Xaero's Minimap](https://www.curseforge.com/minecraft/mc-mods/xaeros-minimap) and [Xaero's World Map](https://www.curseforge.com/minecraft/mc-mods/xaeros-world-map) | *Efficient minimap and top-down view overworld maps with vanilla aesthetics.*
